# linear-vect

./: LICENSE  linear-vect.cabal
Linear/: Class.hs  Decomp.hs  Mat.hs  Vect.hs
