name:                linear-vect
version:             0.2.0
synopsis:            A low-dimensional linear algebra library, operating on the Num typeclass
description:         A low-dimensional (2, 3, 4 and Quaternions) linear algebra library,
		     with lots of useful functions. Forked from vect library at <http://hackage.haskell.org/package/vect>
		     by Balazs Komuves in order to use Num typeclass instead of Float, Double, Floating.
		     Many thanks to Balazs Komuves and Charles Durham.
homepage:            https://github.com/capsjac/linear-vect
license:             BSD3
license-file:        LICENSE
author:              capsjac <capsjac at gmail dot com>
maintainer:          capsjac <capsjac at gmail dot com>
copyright:           (c) 2008-2011 Balazs Komuves (c) 2014 Charles Durham (c) 2014 capsjac
category:            Math
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:              git
  location:          https://github.com/capsjac/linear-vect

library
  exposed-modules:     Linear.Class
                     , Linear.Decomp
                     , Linear.Mat
                     , Linear.Vect

  build-depends:       base            >= 4.7 && < 4.9
                     , random          >= 1.0 && < 1.2
                     , deepseq         >= 1.2
                     , vector          >= 0.10
                     , vector-th-unbox >= 0.2.1

  default-language:    Haskell2010

  other-extensions:    FlexibleContexts
                     , FlexibleInstances
                     , GeneralizedNewtypeDeriving
                     , MultiParamTypeClasses
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , FunctionalDependencies